# kwoncy2020

./: README.md
error_history/2024_dec_001_cross_build_tflite_c_for_windows_with_WSL2/: Readme.md
error_history/2024_dec_002_using_dll_library_msvc_in_vscode_solve_export_symbol_problem_when_consecutively_linking/: Readme.md
error_history/2024_dec_003_flutter_ffi_dll_loading_fail/: Readme.md
error_history/2024_dec_004_make_hotkey_for_monitor_brightness/: Readme.md
error_history/2025_feb_001_integrate_ort_llm/: README.md
error_history/2025_jan_001_using_onnxruntime_dll_with_xnnpack_and_dml/: Readme.md
error_history/2025_jan_002_integrate_llama_cpp/: Readme.md
error_history/2025_mar_001_flutter_android_build/: Readme.md
practices/: .gitignore
practices/AI_multi_agent/: README.md  my_multi_ai_agent_v0.1.0.py  my_multi_ai_agent_v0.1.1.py
practices/Kotlin_Compose_AI_app/app/: build.gradle.kts
practices/flutter_ai_app1/: .gitignore  README.md  pubspec.yaml
practices/flutter_ai_app1/lib/: controller.dart  main.dart  model.dart
practices/flutter_ai_app1/linux/: CMakeLists.txt  my_application.cc
practices/flutter_ai_app1/test/: widget_test.dart
practices/flutter_ai_app1/web/: index.html  manifest.json
practices/flutter_ai_app1/windows/: CMakeLists.txt
practices/lang_fr_encode/: encode_manager.py  encode_manager_v0.1.0.py  encode_manager_v0.2.0.py  encode_manager_v0.2.1.py  encode_manager_v0.2.2.py  encode_manager_v0.2.3.py  encode_manager_v0.2.5.py  encoding_2pass.bat  svtapp.py  svtapp_2pass.bat
practices/office_help/: .windsurfrules  office_help.code-workspace
practices/office_help/ctl_manager/: module_ctl_manage.cpp  module_ctl_manage.ilk  module_ctl_manage_base.cpp  module_ctl_manage_prev.cpp
practices/office_help/gui/: .clangd  CMakeLists.txt  bounding_box_control_panel.cppm  controller_factory.cpp  controller_factory.cppm  image_data.cpp  image_data.cppm  image_data_repository.cpp  image_data_repository.cppm  image_data_selector.cpp  image_data_selector.cppm  image_edit_controller.cpp  image_edit_controller.cppm  image_edit_gui.cpp  image_info_panel.cppm  image_processor.cpp  image_processor.cppm  image_viewer_frame.cpp  image_viewer_frame.cppm  implement.md  long_future.md  plan.md  scrolled_image_window.cpp  scrolled_image_window.cppm  scrolled_image_window_segmentation.cpp  test_controller.cpp  utils.cppm  window_factory.cpp  window_factory.cppm  zoom_frame.cpp  zoom_frame.cppm
practices/office_help/gui/docs/: finished.md  implement_rules.md  plan.md  specify.md  고려사항.md
practices/office_help/render_manager/: module_render_manage.cpp  module_render_manage.cppm  module_render_manage_prev.cpp
practices/office_help/screen_manager/: module_find_whandle.cpp
practices/tflite_runtime/: .gitignore  flutter_my_ai.cpp  flutter_my_ai.h  tflite_c.cpp  use_using_tfl_c_shared.cpp  use_using_tfl_c_shared.exp  using_tfl_c_shared.cpp  using_tfl_c_shared.h
practices/tflite_runtime/build_flutter_ai/: CMakeCache.txt  CMakeLists.txt  flutter_my_ai.exp
practices/tflite_runtime/build_using_tfl_c_shared/: CMakeCache.txt
practices/tflite_runtime/build_using_tfl_c_shared_declspec2/: CMakeCache.txt  CMakeLists.txt  using_tfl_c_shared.exp
practices/use_my_chat_ai/: my_chat_ai.h  use_my_chat.cpp
practices/using_ort_dll/: .gitignore  CmakeLists.txt  onnx_infer_temp.py  using_ort_dll.cpp  using_ort_dll_detection.cpp  using_ort_dll_detection.h  using_ort_dll_detection_label_mapping.h  using_ort_dll_detection_test.h
(+33 files in other folders)
